updated to use Java 21 improvements vs old jdk 1.7. migrated to latest libraries and improved unit testing